--- a/SD.HTML
+++ b/SD.HTML
@@ -1,9 +1,53 @@
 <html>
-    <head>
-        <title>my first Form</title>
+<head>
+<style>
+body {
+  color: red;
+}
+</style>
+</head>
+<body>
+<h1>this is my web page</h1>
+<button type="button" onclick="alert('Hello world!')">Click Me!</button>
+<p>today we earn</p>
+<style>
+    table, th, td {
+      border: 1px solid black;
+    }
+    </style>
     </head>
     <body>
+        <style>
+            body {
+              color: rgb(17, 17, 17);
+            }
+            </style>
+    <h1>The caption element</h1>
+    
+    <table>
+      <caption>Monthly savings</caption>
+      <tr>
+        <th>Month</th>
+        <th>Savings</th>
+      </tr>
+      <tr>
+        <td>January</td>
+        <td>$100</td>
+      </tr>
+      <tr>
+        <td>February</td>
+        <td>$50</td>
+</tr>
+</table>    
+<p>My favorite  is hobbies<del>writting</del> <ins>cycling</ins>!</p>
 
-        
-    </body>
+<details>
+    <summary>soham dhopre</summary>
+    <p>my name is soham dhopre</p>
+  </details>
+  <h5>what is html</h5> 
+  <p><dfn>HTML</dfn> is the standard markup language for creating web pages.</p>
+
+
+</body>
 </html>
