--- a/soham.html
+++ b/soham.html
@@ -1,65 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>document</title>
-    </head>
-    <body>
-<h1>enjoy programming</h1>
-    </hr>   
-        <form>
-            <lable>first name:</lable>
-            <input type="text" name="full-name"/>
-            <br>
-            <br>                           
-            <lable>mobile no.: </lable>
-            <input type="number" name="mobile-no"/>
-            <br>
-            <br>
-            <lable>date of birth</lable>
-            <input type="date" name="date-of-birth"/>
-            <br>
-            <br>
-            <lable>email id :</lable>
-            <input type="email"name="email id"/>
-            <br>
-            <br>
-            <lable>address:</lable>
-            <textarea></textarea>
-            <br>
-            <br>
-            <lable for="gender">gender:</lable>
-            <br>
-            <input type="radio" male="gender" value="male"><lable>male</lable>
-            <br> 
-            <input type="radio" name="gender" value="female"><lable>female</lable>
-            <br>
-            <lable for="2+2">2+2=?</lable>
-            <br>
-            <input type="radio" name="2+2" value="4"><lable>4</lable>
-            <input type="radio" name="2+2" value="4"><lable>5</lable>
-            <input type="radio" name="2+2" value="4"><lable>6</lable>
-            <input type="radio" name="2+2" value="4"><lable>8</lable>
-            <br>
-            <lable>favourite colour:</lable>
-            <input type="color"> 
-            <br>
-            <lable>username</lable>  
-            <input type="text" placeholder="enter your username">
-            <br>
-            <br>
-            <lable>passwords:</lable>
-            <input type="password" placeholder="enter your password">
-            <br>
-            <br>
-            <label>upload file</label>
-            <input type="file">
-<BR>
-    <BR>    
-            <input type="submit" value="submit">
-            <input type="reset" value="reset">
 
-            </form>
-         
-            
-    </body>
+<head>
+    <title>soham dhopre</title>
+    <style>
+        .main {
+            flex-direction: row;
+            display: flex;
+            text-align: center;
+            color: white;
+            vertical-align: middle;
+        }
+
+        .main1 {
+            height: 300px;
+            width: 300px;
+            background-color: blue;
+        }
+
+        .main2 {
+            height: 300px;
+            width: 300px;
+            background-color: green;
+        }
+
+        .main3 {
+            height: 300px;
+            width: 300px;
+            background-color: red;
+        }
+        .container{
+         height: 80px;
+         width: 400px;
+         color: peru;
+
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container"><h1>type of px color</h1> <span>there are three type of color in px</span></div>
+    <div class="main">
+        <div class="main1"> box 1</div>
+        <br>
+         <br>
+        <div class="main2"> box 2</div>
+        <br>
+         <br>
+        <div class="main3">box 3</div>
+        <br>
+         <br>
+    </div>
+</body>
+
 </html>
