--- a/practise.html
+++ b/practise.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 
-<head>
     <title>Document</title>
     <link rel="stylesheet" href="./style-2.css">
 </head>
@@ -27,7 +29,7 @@
         </div>
     </header>
     <nav>
-        <span>home</span>
+        <span >home</span>
         <span>skills</span>
         <span>about</span>
         <span>services</span>
