--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
         body {
             background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20250205/pngtree-soft-pastel-floral-design-light-blue-background-image_16896113.jpg);
             background-repeat:no-repeat;
-            background-size:repeat;
+            background-size:cover;
         }
     </style>
 </head>
